# product_management

./: README.md  product_requeriment_document.md  pyproject.toml  report.md  terminal_log.txt
result/: product_requirement_document_20250713_230044.md  product_requirement_document_20250713_235159.md  product_requirement_document_20250714_001745.md
src/product_management/: business.py  crew.py  main.py
src/product_management/config/: agents.yaml  tasks.yaml
