[project]
name = "product_management"
version = "0.1.0"
description = "product_management using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
product_management = "product_management.main:run"
run_crew = "product_management.main:run"
train = "product_management.main:train"
replay = "product_management.main:replay"
test = "product_management.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
